[package]
name = "file_type_enum"
version = "0.11.0"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2018"
description = "Simple and minimal enum with one variant for each file type."
repository = "https://github.com/marcospb19/file_type_enum"
license = "MIT"
keywords = ["filetype", "filesystem", "simple", "tiny"]
categories = ["api-bindings", "filesystem"]

[dependencies]
libc = { version = "0.2", optional = true }

[features]
mode-t-conversion = ["libc"]
default = []
