[package]
name = "file_type_enum"
version = "1.0.1"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2021"
description = "An enum with a variant for each file type."
repository = "https://github.com/marcospb19/file_type_enum"
license = "MIT"
keywords = ["filetype", "filesystem"]
categories = ["api-bindings", "filesystem"]

[dependencies]
libc = { version = "0.2", optional = true }

[features]
mode-t-conversion = ["libc"]
default = []
